@@ -1,11 +1,8 @@
-<!-- Automagically generated by the ToDo program on 2005-04-05 -->
+<!-- Automagically generated by the ToDo program on 2005-04-06 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1112749550">
-        Backport 1.0.3 bug fixes!
-    </note>
     <note priority="high" time="1112564723">
         Add some kind of flag for formatter_T for when --quiet to either print with a delim of '\n' or ' '.
     </note>
@@ -17,8 +14,5 @@
     </note>
     <note priority="medium" time="1112411396">
         Fix bug where status is printed if -pq is specified.
-    </note>
-    <note priority="low" time="1112586651">
-        Work on OO-file classes. like a dir_T that when iterated over readdir's.
     </note>
 </todo>
